update and add css

--- a/hubungi.html
+++ b/hubungi.html
@@ -1,17 +1,18 @@
 <html>
   <head>
     <title>Contact Me</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <a href="index.html">Beranda</a> &nbsp&nbsp&nbsp
     <a href="">Hubungi Saya</a><br><br>
     <h1>Contact Details</h1>
-    <ul>
+    <ul id="text-blue">
       <li>Kota Kediri</li>
       <li>081234567890</li>
       <li>email@ub.ac.id</li>
     </ul>
-    <form>
+    <form class="">
       <label>Nama : </label>
       <input type="text" name="nama" value=""><br>
       <label>Email : </label>
@@ -20,7 +21,7 @@
       <input type="text" name="no" value=""><br>
       <label>Pesan : </label><br>
       <textarea rows="9" cols="40" name="pesan" value=""></textarea><br>
-      <input type="submit" name="">
+      <input class="background-gray" type="submit" name="">
     </form>
 </body>
 </html>
