--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
   <head>
     <title>My Profile</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <a href="">Beranda</a> &nbsp&nbsp&nbsp
     <a href="hubungi.html">Hubungi Saya</a><br><br>
-    <a href="https://www.instagram.com/jemymboh/"><img src="inst.jpg" alt="foto"></a>
+    <a href="https://www.instagram.com/jemymboh/"><img class="round" src="inst.jpg" alt="foto"></a>
     <h1>Mohammad Hary Sujadmiko</h1>
-    <ul>
+    <ul id="text-blue">
       <li>165150200111121</li>
       <li>Kota Kediri</li>
       <li>Teknik Informatika</li>
-      ⭐⭐⭐⭐⭐
     </ul>
+    <hr>
     <h3>Pengalaman Organisasi</h3>
     <table border="1">
     <tr>
@@ -26,10 +27,11 @@
           <td>SMA/MAN</td>
         </tr>
     </table>
+    <hr>
     <h3>Jenjang Pendidikan</h3>
-    <table border="1">
+    <table class="background-green" border="1">
     <tr>
-      <th</th>
+      <th>Tahun</th>
       <th>Sekolah</th>
     </tr>
     <tr>
@@ -49,8 +51,9 @@
           <td>Universitas Brawijaya</td>
         </tr>
     </table>
+    <hr>
     <h3>Mata Kuliah yang Telah Diambil</h3>
-  <table border="1">
+  <table class="background-gray" border="1">
     <tr>
       <th>No</th>
       <th>Nama Mata Kuliah</th>
